macros/tests/unhappy/invalid_skip_attr.test.stderr
error: unexpected token in attribute, skip attribute does not take any extra tokens or arguments
 --> tests/unhappy/invalid_skip_attr.test.rs:8:24
  |
8 |     #[wasm_export(skip = "string")]
  |                        ^
